Try fix css on mobile v2

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url('file:///C:/Users/Miko/Desktop/mikoxmi.github.io/img/back.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6) ), url('/img/back.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
+    height: 100%;
 }
 *{
     margin: 0;
